fixing image stretch

--- a/styles.css
+++ b/styles.css
@@ -1649,6 +1649,7 @@ textarea {
 .casebody img{
 	max-width: 100%;
 	margin-top: 30px;
+	height: auto;
 }
 
 
@@ -1694,6 +1695,7 @@ display: none;
 
 .casebody .caseimg img{
 	max-width: 335px;
+	height: auto;
 
 
 }
